# Seminario-Api-Core

./: .env  .gitignore  README.md  complete_setup.sql  core.env  env.example  insert_messages.sql  poetry-export.txt  pyproject.toml  requirements.txt  run.sh
scripts/: ensure_conversation_category.py
src/: config.py  database.py  main.py  models.py  schemas.py
src/api/: __init__.py  analytics.py  auth.py  conversations.py  history.py  ia_service.py  messages.py
src/services/: analytics_service.py  conversation_service.py  history_service.py  message_service.py
src/utils/: security.py
